// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'currentSource' it should select from the current source 1`] = `
"{
	\\"targetProp\\": \\"object1.targetProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\",
	\\"sourceProp\\": \\"should be the value of sharedProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'currentSourceProperty' it should select from the current source property 1`] = `
"{
	\\"targetProp\\": \\"object1.targetProp\\",
	\\"sharedProp\\": \\"/$select/path\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'currentTarget' it should select from the current target 1`] = `
"{
	\\"targetProp\\": \\"should be the value of sharedProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'currentTargetProperty' it should select from the current target property 1`] = `
"{
	\\"targetProp\\": \\"object1.targetProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\",
	\\"sourceProp\\": \\"object2.sourceProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'source' it should select from the source 1`] = `
"{
	\\"targetProp\\": \\"object1.targetProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\",
	\\"sourceProp\\": \\"should be the value of sharedProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to 'target' it should select from the target 1`] = `
"{
	\\"targetProp\\": \\"should be the value of sharedProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.from is set to a different value it should process the $select.from value and select from the result 1`] = `
"{
	\\"targetProp\\": \\"object1.targetProp\\",
	\\"sharedProp\\": \\"should be the value of sharedProp\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.path is set it should use the json pointer to select a value in the target 1`] = `
"{
	\\"a\\": \\"should be selected\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and $select.query is set it should use the json path to select a value in the target 1`] = `
"{
	\\"a\\": \\"should be selected\\"
}"
`;

exports[`when merging two objects and a source object contains a $select operation and a $select.query matching multiple elements is set and $select.multiple is true it should return an array with all matches 1`] = `
"{
	\\"targetProp\\": [
		\\"should be selected\\",
		\\"should also be selected\\"
	],
	\\"sharedProp\\": [
		\\"should be selected\\",
		\\"should also be selected\\",
		\\"should be merged and visible\\"
	]
}"
`;

exports[`when merging two objects and a source object contains a $select operation and a $select.query matching multiple elements is set but $select.multiple is not set it should return the first value 1`] = `
"{
	\\"targetProp\\": [
		\\"should be the value of sourceProp\\",
		\\"object1/targetProp/1\\"
	],
	\\"sourceProp\\": \\"should be the value of sourceProp\\"
}"
`;
